# cinit

./: CMakeLists.txt  README.md
.github/workflow/: create-release.yml
.github/workflows/: create-release.yml
cmake/: check_musl.c
include/: default.h  init.h
src/: cinit.c  cinit.c~  default.c  init.c
